--- a/web/templates/registro.html
+++ b/web/templates/registro.html
@@ -7,9 +7,7 @@
     
     
      <!-- CUSTOM CSS -->
-     <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css')}}"> 
-     <link rel="stylesheet" href="{{ url_for('static', filename='css/navbar.css')}}" >
-     <link rel="stylesheet" href="{{ url_for('static', filename='css/registro.css')}}">
+     <link rel="stylesheet" href="{{ url_for('static', filename='css/sign-in.css')}}">
 
     <title>Registro</title>
 </head>
