--- a/web/static/css/medicamentos.css
+++ b/web/static/css/medicamentos.css
@@ -785,54 +785,129 @@ header {
   display: flex;
 }
 
-main {
+.main {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 10vh;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  align-items: flex-start;
+}
+
+.table {
+  table-layout: initial;
+  border-collapse: collapse;
+  order: 2;
+  margin: 20px;
+  border: #800080 solid 4px;
+  /* TABLE TR */
+  /*ELEMENTO 2*/
+  /* TABLE TBODY */
+  /* TABLE TH-TD */
+}
+.table__tbody-iconos {
+  visibility: collapse;
+  opacity: 0;
+  transition: 1s;
+}
+.table-tr {
+  background-color: #71C9CE;
+  font-weight: bolder;
+  text-align: center;
+  height: 68px;
+}
+.table-tr:nth-child(even) {
+  background-color: #96d3d6;
+}
+.table-tr:hover {
+  background-color: #6ac6eb;
+}
+.table-tr:hover .table__tbody-iconos {
+  visibility: visible;
+  background: #130f40;
+  opacity: 1;
+  Transition: opacity 0.3s;
+}
+.table__tbody-descripcionmed {
+  max-width: 25em;
+}
+.table__tbody-fechamed {
+  max-width: fit-content;
+}
+.table__tbody-tipomed {
+  max-width: 11.25em;
+}
+.table__tbody-nombremed {
+  max-width: 7.5em;
+}
+.table-th {
+  border-bottom: #000 solid 0.1em;
+  font-weight: bolder;
+  font-size: 1.3em;
+  padding-top: 0.2em;
+  padding-bottom: 0.2em;
+  text-align: center;
+  background-color: #E6F4FF;
+}
+.table-td {
+  padding-left: 1.1em;
+  padding-right: 1.1em;
+}
+.table-iconos {
+  display: flex;
+  flex-direction: column;
+  width: 0;
+}
+.table-icon {
+  padding: 5px;
+  margin: 3px;
+  margin-left: 2px;
+  border: #800080 solid 4px;
+  border-radius: 50%;
+  background-color: #E6F4FF;
+  color: #000;
 }
 
 .formulario {
   display: flex;
-  flex-direction: column;
+  flex-flow: column nowrap;
+  justify-content: center;
   align-items: center;
-  justify-content: space-between;
-  background-color: #E6F4FF;
-  border-radius: 0.6em;
-  border: #800080 solid 4px;
-  height: 35em;
   width: 25em;
-  padding: 20px;
+  height: 33em;
+  margin-top: 20px;
+  padding: 0.5em;
+  border: #800080 solid 4px;
+  border-radius: 0.6em;
+  background-color: #E6F4FF;
+  order: 1;
+  gap: 1.2em;
 }
-.formulario-img {
-  height: 5em;
-  width: 5em;
-  border-radius: 50%;
+.formulario-titulo {
+  font-size: 2em;
+  text-decoration: none;
 }
-.formulario__div {
+.formulario__inputContainer {
   position: relative;
-  width: 23em;
-  height: 4em;
-  margin: 10px;
+  width: 20em;
+  height: 3em;
 }
-.formulario__div-label {
+.formulario__inputContainer-label {
   position: absolute;
-  top: 23px;
-  left: 15px;
-  padding: 0 4px;
+  top: 15px;
+  left: 7px;
   color: #DADCE0;
+  padding-left: 13px;
   font-size: 16px;
   z-index: 40;
   -webkit-transition: 0.6s ease top, 0.6s ease opacity;
   transition: 0.6s ease top, 0.6s ease opacity;
 }
-.formulario__div-input {
+.formulario__inputContainer-input {
   position: absolute;
-  top: 0px;
-  left: 0px;
   height: 100%;
   width: 100%;
-  border: solid 2px #800080;
+  top: 0;
+  left: 0;
+  border: 3px solid #800080;
   border-radius: 7px;
   font-size: 16px;
   padding: 15px;
@@ -840,61 +915,49 @@ main {
   background: #f1f1f1;
   z-index: 1;
 }
-.formulario__div-input::placeholder {
+.formulario__inputContainer-input::placeholder {
   color: transparent;
 }
-.formulario__div-input:focus {
-  border: solid 3px #800080;
+.formulario__inputContainer-input:focus {
+  border: #800080 solid 4px;
 }
-.formulario__div-input:focus + .formulario__div-label {
-  /*lo leo como: cuando haya foco en el input: realizar lo siguiente en el label*/
-  top: 8px;
-  left: 13px;
+.formulario__inputContainer-input:focus + .formulario__inputContainer-label {
+  top: 15px;
+  left: 5px;
   z-index: 10;
   font-size: 14px;
   font-weight: 600;
-  color: #800080;
+  color: purple;
 }
-.formulario__div-input:not(:placeholder-shown) + .formulario__div-label {
-  top: -17px;
+.formulario__inputContainer-input:not(:placeholder-shown) + .formulario__inputContainer-label {
+  top: -18px;
   z-index: 0;
   font-size: 14px;
   font-weight: 600;
   color: rgba(128, 0, 128, 0.459);
 }
-.formulario__checkbox {
-  margin: 1em;
+.formulario__inputContainer-textarea {
+  height: 6em;
+  background-color: #f6f6f6;
+  resize: none;
 }
-.formulario__checkbox__label {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 6px;
+.formulario-submit {
+  width: 100%;
+  padding: 0.5em 1em;
+  margin: auto;
+  margin-top: 50px;
+  border: 1px solid #000;
+  border-radius: 7px;
+  color: #fff;
+  background-color: #000;
+  font-size: 1.2em;
+  font-weight: 600;
 }
-.formulario__checkbox__label-check {
-  width: 1rem;
-  height: 1rem;
-}
-
-/* cierra el formulario */
-.button {
-  width: 8em;
-  height: 2em;
-  margin-bottom: 1em;
-  border: 3px solid #000;
-  border-radius: 0.6em;
-}
-.button:hover {
+.formulario-submit:hover {
   transform: translateY(-2px);
-  outline: #800080 solid 4px;
+  border: #800080 solid 4px;
 }
 
-.credits {
-  position: relative;
-  font-size: 0.8em;
-  opacity: 0.5;
-  top: 15px;
-  right: 120px;
-}
+/* a fecha de vencimiento puedo camuflarla con el background color y luego hacerla aparecer cuando haya un focus o algo asi en el campo particular*/
 
-/*# sourceMappingURL=login.css.map */
+/*# sourceMappingURL=medicamentos.css.map */
