--- a/web/static/sass/editarMed.scss
+++ b/web/static/sass/editarMed.scss
@@ -1,3 +1,8 @@
+@import 'variables';
+@import 'normalize';
+@import 'navbar';
+
+
 .main {
     display: flex;
     flex-flow: row wrap;
@@ -11,7 +16,7 @@
     border-collapse:collapse;
     order:2;
     margin: 20px;
-    border: var(--borders);
+    border: $borders;
     width: 55em;
 
 /* TABLE TR */
@@ -62,7 +67,7 @@
         padding-top: 0.2em;
         padding-bottom: 0.2em;
         text-align:center;
-        background-color: var(--backgrounds-colors);
+        background-color: $backgrounds-colors;
     }
 
     &-td {
@@ -82,9 +87,9 @@
     height: 33em;
     margin-top: 20px;
     padding: 0.5em;
-    border: var(--borders);
+    border: $borders;
     border-radius: 0.6em;
-    background-color: var(--backgrounds-colors);
+    background-color: $backgrounds-colors;
     order: 1;
     gap: 1.2em;
 
@@ -129,7 +134,7 @@
             }
 
             &:focus{
-                border: var(--borders);
+                border: $borders;
             }
 
             &:focus + .formulario__inputContainer-label{
@@ -174,7 +179,7 @@
 
         &:hover{
             transform: translateY(-2px);
-            border: var(--borders);
+            border: $borders;
         } 
     }
     
