--- a/web/templates/medicamentos.html
+++ b/web/templates/medicamentos.html
@@ -8,9 +8,7 @@
     <!-- COMPLETAR LOS META FALTANTES -->
     
     <!-- CUSTOM CSS -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css')}}"> 
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/navbar.css')}}" >
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/landing.css')}}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/medicamentos.css')}}">
 
     <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
