--- a/web/templates/inicioSesion.html
+++ b/web/templates/inicioSesion.html
@@ -29,7 +29,7 @@
     </header>
 
     <main>
-        <form class="formulario" action="/login">
+        <form class="formulario" action="/login" method="GET">
             <img class="formulario-img" src="{{ url_for('static', filename='logo.jpg')}}" alt="">
             <h1 class="formulario-h1">Login</h1>
             
