--- a/web/templates/medicamentos.html
+++ b/web/templates/medicamentos.html
@@ -113,12 +113,12 @@
                 </div>        
 
                 <div class="formulario__inputContainer">
-                    <input class="formulario__inputContainer-input" id="cantidad" type="number" name="cantidad" min="0" required placeholder="Cantidad disponible">    
+                    <input class="formulario__inputContainer-input" id="cantidad" type="number" name="cantidad" min="0" max="300" required placeholder="Cantidad disponible">    
                     <label class="formulario__inputContainer-label" for="cantidad">Cantidad</label>
                 </div> 
 
                 <div class="formulario__inputContainer">
-                    <input class="formulario__inputContainer-input" id="fecha" type="month" name="fecha" required>    
+                    <input class="formulario__inputContainer-input" id="fecha" type="month" name="fecha" min="2020-01" max="2050-01"  required>    
                     <label class="formulario__inputContainer-fechalabel formulario__inputContainer-label" for="fecha"> Fecha de vencimiento</label>
                 </div>
                 <div class="formulario__inputContainer">
