--- a/web/templates/registro.html
+++ b/web/templates/registro.html
@@ -31,7 +31,7 @@
     <main>
 
         <div class="formContainer">
-            <form class="formulario" action="">
+            <form class="formulario" action="/registro" method="POST">
 
                 <img class="formulario-logo" src="{{ url_for('static', filename='logo.jpg')}}" alt="logo">
                 <h1 class="formulario-titulo">Sign Up</h1>
@@ -47,7 +47,7 @@
                 </div>
                 
                 <div class="formulario__inputContainer">
-                    <input type="password" class="formulario__inputContainer-input" id="pass" name="pass" placeholder="Password" required>
+                    <input type="password" class="formulario__inputContainer-input" id="pass" name="passw" placeholder="Password" required>
                     <label for="pass" class="formulario__inputContainer-label">Password</label>
                 </div>
                 
